fixed quick align items bug for contact form

--- a/style.css
+++ b/style.css
@@ -29,6 +29,13 @@
     align-items: center;
 }
 
+.contactFormInputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .contactFormInputs input {
     margin-top: 20px;
     height: 60px;
